# Nao_ws

./: .gitignore  .gitmodules  README.md  tutorial_3.py
.devcontainer/: Dockerfile  devcontainer.json
src/nao_control_tutorial_1/: CMakeLists.txt
src/nao_control_tutorial_1/launch/: nao.launch
src/nao_control_tutorial_1/src/: client.cpp
src/nao_control_tutorial_1/srv/: InterpolationJoints.srv  InterpolationMultiJoints.srv  TrackAruco.srv
src/nao_control_tutorial_2/: CMakeLists.txt  package.xml
src/nao_control_tutorial_2/launch/: nao.launch
src/nao_control_tutorial_2/script/: move_service.py  rotate.py
src/nao_control_tutorial_2/src/: client.cpp
src/nao_control_tutorial_2/srv/: MoveJoints.srv  TrackAruco.srv
src/nao_control_tutorial_3/src/: main.cpp
src/pick_place_card/: CMakeLists.txt  package.xml
src/pick_place_card/script/: Aruco_Marker.py  UNO_Card_color_detection.py  move_to_object.py  nao_communication.py  pick_place_service.py  temp  uno-engine-motion.py  uno-engine-motion_jorge.py  uno-engine.py  uno-engine_jorge.py  uno_eng_listen.py
src/pick_place_card/src/: client.cpp
src/pick_place_card/srv/: CartesianPositionOrientation.srv  Pose2D.srv
src/test/: package.xml
src/test/nao_control_tutorial_1/: CMakeLists.txt  package.xml
src/test/nao_control_tutorial_1/script/: move_service.py
src/test/nao_control_tutorial_1/src/: client.cpp
src/test/nao_control_tutorial_1/srv/: MoveJoints.srv
src/test/nao_control_tutorial_3/: CMakeLists.txt  package.xml
src/test/nao_control_tutorial_3/src/: main.cpp
src/test/scripts/: API4UNO.py  tuto_4.py  tutorial2-v2.py  tutorial2.py  tutorial_3.py  tutorial_4.py
